--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -1,12 +1,37 @@
 <resources>
 
-    <style name="GdxTheme" parent="android:Theme">
+    <style name="Dialog_No_Border">
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowAnimationStyle">@style/ExitDialogAnimationSlide</item>
+    </style>
+
+    <style name="ExitDialogAnimationFade">
+        <item name="android:windowEnterAnimation">@anim/fadein</item>
+        <item name="android:windowExitAnimation">@anim/fadeout</item>
+    </style>
+
+    <style name="ExitDialogAnimationSlide">
+        <item name="android:windowEnterAnimation">@anim/translate_left_side</item>
+        <item name="android:windowExitAnimation">@anim/translate_right_side</item>
+    </style>
+
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
+
 		<item name="android:windowBackground">@android:color/transparent</item>
         <item name="android:colorBackgroundCacheHint">@null</item>
         <item name="android:windowAnimationStyle">@android:style/Animation</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowContentOverlay">@null</item>
-        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowFullscreen">false</item>
+        <!--   your app branding color for the app bar -->
+        <item name="colorPrimary">#f6a418</item>
+        <!--   darker variant for the status bar and contextual app bars -->
+        <item name="colorPrimaryDark">#9C3100</item>
+        <!--   theme UI controls like checkboxes and text fields -->
+        <item name="colorAccent">#f44c00</item>
+        <!--<item name="windowActionBar">false</item>-->
+        <item name="android:background">@android:color/background_light</item>
     </style>
 
 </resources>
