--- a/android/res/values/styles.xml
+++ b/android/res/values/styles.xml
@@ -17,11 +17,12 @@
     </style>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light">
-
-		<item name="android:windowBackground">@android:color/transparent</item>
-        <item name="android:colorBackgroundCacheHint">@null</item>
-        <item name="android:windowAnimationStyle">@android:style/Animation</item>
+        <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
+
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowAnimationStyle">@style/ExitDialogAnimationSlide</item>
         <item name="android:windowContentOverlay">@null</item>
         <item name="android:windowFullscreen">false</item>
         <!--   your app branding color for the app bar -->
@@ -32,6 +33,27 @@
         <item name="colorAccent">#f44c00</item>
         <!--<item name="windowActionBar">false</item>-->
         <item name="android:background">@android:color/background_light</item>
+
     </style>
 
+
+    <style name="AppTheme.Full" parent="Theme.AppCompat.Light">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowAnimationStyle">@style/ExitDialogAnimationSlide</item>
+        <item name="android:windowContentOverlay">@null</item>
+        <item name="android:windowFullscreen">true</item>
+        <!--   your app branding color for the app bar -->
+        <item name="colorPrimary">#f6a418</item>
+        <!--   darker variant for the status bar and contextual app bars -->
+        <item name="colorPrimaryDark">#9C3100</item>
+        <!--   theme UI controls like checkboxes and text fields -->
+        <item name="colorAccent">#f44c00</item>
+        <!--<item name="windowActionBar">false</item>-->
+        <item name="android:background">@android:color/background_light</item>
+
+    </style>
 </resources>
